<?xml version="1.0"?>
<package>
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>camera_model</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vision_msgs</build_depend>
   <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>message_runtime</run_depend>

  <run_depend>vision_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>camera_model</run_depend>
  <run_depend>message_runtime</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
